[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["Zorex Salvo <zorexsalvo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
